tests/invalid/invalid_array_ctor.ri
func main() {
    _ = []int(init: 5); // invalid
}
